Added Feather Icons, created sicl-icon component

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
         <sicl-button type="warning" text="Button"></sicl-button>
       </div>
       <div class="row space-between">
+        <sicl-button type="primary" text="Button" icon="search"></sicl-button>
+        <sicl-button type="secondary" text="Button" icon="arrow-left"></sicl-button>
+        <sicl-button type="tertiary" text="Button" icon="help-circle"></sicl-button>
+        <sicl-button type="warning" text="Button" icon="trash-2"></sicl-button>
+      </div>
+      <div class="row space-between">
         <sicl-button type="primary" text="Button" disabled></sicl-button>
         <sicl-button type="secondary" text="Button" disabled></sicl-button>
         <sicl-button type="tertiary" text="Button" disabled></sicl-button>
