add section title into index.html

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <div class="container">
+      <h2 class="container__title">Button - Primary</h2>
+      <hr class="container__divider" />
       <div class="row space-between">
         <sicl-button type="primary" text="Button"></sicl-button>
         <sicl-button type="secondary" text="Button"></sicl-button>
