🧹 Button clean-up (right icon doesn't work tho) ➕ Added sicl-input (text) component

--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,28 @@
   <body>
     <div class="container">
       <div class="row space-between">
-        <sicl-button type="primary" text="Button"></sicl-button>
-        <sicl-button type="secondary" text="Button"></sicl-button>
-        <sicl-button type="tertiary" text="Button"></sicl-button>
-        <sicl-button type="warning" text="Button"></sicl-button>
+        <sicl-button type="primary">Button</sicl-button>
+        <sicl-button type="secondary">Button</sicl-button>
+        <sicl-button type="tertiary">Button</sicl-button>
+        <sicl-button type="warning">Button</sicl-button>
       </div>
       <div class="row space-between">
-        <sicl-button type="primary" text="Button" icon="search"></sicl-button>
-        <sicl-button type="secondary" text="Button" icon="arrow-left"></sicl-button>
-        <sicl-button type="tertiary" text="Button" icon="help-circle"></sicl-button>
-        <sicl-button type="warning" text="Button" icon="trash-2"></sicl-button>
+        <sicl-button type="primary" iconLeft="search">Button</sicl-button>
+        <sicl-button type="secondary" iconLeft="arrow-left">Button</sicl-button>
+        <sicl-button type="tertiary" iconLeft="help-circle">Button</sicl-button>
+        <sicl-button type="warning" iconLeft="trash-2">Button</sicl-button>
       </div>
       <div class="row space-between">
-        <sicl-button type="primary" text="Button" disabled></sicl-button>
-        <sicl-button type="secondary" text="Button" disabled></sicl-button>
-        <sicl-button type="tertiary" text="Button" disabled></sicl-button>
-        <sicl-button type="warning" text="Button" disabled></sicl-button>
+        <sicl-button type="primary" iconRight="search">Button</sicl-button>
+        <sicl-button type="secondary" iconRight="arrow-left">Button</sicl-button>
+        <sicl-button type="tertiary" iconRight="help-circle">Button</sicl-button>
+        <sicl-button type="warning" iconRight="trash-2">Button</sicl-button>
+      </div>
+      <div class="row space-between">
+        <sicl-button type="primary" disabled>Button</sicl-button>
+        <sicl-button type="secondary" disabled>Button</sicl-button>
+        <sicl-button type="tertiary" disabled>Button</sicl-button>
+        <sicl-button type="warning" disabled>Button</sicl-button>
       </div>
     </div>
   </body>
