🧹 Button styling cleanup ➕ Input styling

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,9 @@
         <sicl-button type="tertiary" disabled>Button</sicl-button>
         <sicl-button type="warning" disabled>Button</sicl-button>
       </div>
+      <div class="row space-between">
+        <sicl-input type="text" placeholder="Text input" />
+      </div>
     </div>
   </body>
 </html>
