--- a/src/index.html
+++ b/src/index.html
@@ -10,32 +10,34 @@
   </head>
   <body>
     <div class="container">
-      <div class="row space-between">
+      <!-- <div class="row">
         <sicl-button type="primary">Button</sicl-button>
         <sicl-button type="secondary">Button</sicl-button>
         <sicl-button type="tertiary">Button</sicl-button>
         <sicl-button type="warning">Button</sicl-button>
       </div>
-      <div class="row space-between">
+      <div class="row">
         <sicl-button type="primary" iconLeft="search">Button</sicl-button>
         <sicl-button type="secondary" iconLeft="arrow-left">Button</sicl-button>
         <sicl-button type="tertiary" iconLeft="help-circle">Button</sicl-button>
         <sicl-button type="warning" iconLeft="trash-2">Button</sicl-button>
       </div>
-      <div class="row space-between">
+      <div class="row">
         <sicl-button type="primary" iconRight="search">Button</sicl-button>
         <sicl-button type="secondary" iconRight="arrow-left">Button</sicl-button>
         <sicl-button type="tertiary" iconRight="help-circle">Button</sicl-button>
         <sicl-button type="warning" iconRight="trash-2">Button</sicl-button>
       </div>
-      <div class="row space-between">
+      <div class="row">
         <sicl-button type="primary" disabled>Button</sicl-button>
         <sicl-button type="secondary" disabled>Button</sicl-button>
         <sicl-button type="tertiary" disabled>Button</sicl-button>
         <sicl-button type="warning" disabled>Button</sicl-button>
-      </div>
-      <div class="row space-between">
-        <sicl-input type="text" placeholder="Text input" />
+      </div> -->
+      <div class="row">
+        <!-- <sicl-input type="text" placeholder="Placeholder" labelText="Text input"/> -->
+        <sicl-icon icon="search" size="20px"></sicl-icon>
+        <svg class="feather feather-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle></svg>
       </div>
     </div>
   </body>
