🧹 Tiny cleanup & refactoring ➕ Added Checkbox component (styles not working tho)

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,11 @@
         <sicl-input type="text" placeholder="Placeholder" label-text="Left icon" icon-left="search"></sicl-input>
         <sicl-input type="text" placeholder="Placeholder" label-text="Right icon" icon-right="eye"></sicl-input>
       </div>
+      <div class="row">
+        <div class="column">
+          <sicl-checkbox label-text="Default"></sicl-checkbox>
+        </div>
+      </div>
     </div>
   </body>
 </html>
