➕ Added radio component 🔧 Tweaked hover state on input and checkbox (now works)

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,13 @@
       <div class="row">
         <div class="column">
           <sicl-checkbox label-text="Default"></sicl-checkbox>
+          <sicl-checkbox label-text="Default" checked></sicl-checkbox>
+          <sicl-checkbox label-text="Default" disabled></sicl-checkbox>
+        </div>
+        <div class="column">
+          <sicl-radio label-text="Default"></sicl-radio>
+          <sicl-radio label-text="Default" checked></sicl-radio>
+          <sicl-radio label-text="Default" disabled></sicl-radio>
         </div>
       </div>
     </div>
