🧹 Controls styling cleanup ➕ Controls functionality expansion ➕ Controls disabled state

--- a/src/index.html
+++ b/src/index.html
@@ -43,13 +43,15 @@
       <div class="row">
         <div class="column">
           <sicl-checkbox label-text="Default"></sicl-checkbox>
-          <sicl-checkbox label-text="Default" checked></sicl-checkbox>
-          <sicl-checkbox label-text="Default" disabled></sicl-checkbox>
+          <sicl-checkbox label-text="Checked" checked></sicl-checkbox>
+          <sicl-checkbox label-text="Disabled" disabled></sicl-checkbox>
+          <sicl-checkbox label-text="Disabled & checked" disabled checked></sicl-checkbox>
         </div>
         <div class="column">
           <sicl-radio label-text="Default"></sicl-radio>
-          <sicl-radio label-text="Default" checked></sicl-radio>
-          <sicl-radio label-text="Default" disabled></sicl-radio>
+          <sicl-radio label-text="Checked" checked></sicl-radio>
+          <sicl-radio label-text="Disabled" disabled></sicl-radio>
+          <sicl-radio label-text="Disabled & checked" disabled checked></sicl-radio>
         </div>
       </div>
     </div>
