--- a/src/index.html
+++ b/src/index.html
@@ -14,25 +14,25 @@
         <sicl-button class="primary" type="button">Button</sicl-button>
         <sicl-button class="secondary" type="button">Button</sicl-button>
         <sicl-button class="tertiary" type="button">Button</sicl-button>
-        <sicl-button class="warning" type="button">Button</sicl-button>
+        <sicl-button class="danger" type="button">Button</sicl-button>
       </div>
       <div class="row">
         <sicl-button class="primary" type="button" icon-left="search">Button</sicl-button>
         <sicl-button class="secondary" type="button" icon-left="arrow-left">Button</sicl-button>
         <sicl-button class="tertiary" type="button" icon-left="help-circle">Button</sicl-button>
-        <sicl-button class="warning" type="button" icon-left="trash-2">Button</sicl-button>
+        <sicl-button class="danger" type="button" icon-left="trash-2">Button</sicl-button>
       </div>
       <div class="row">
         <sicl-button class="primary" type="button" icon-right="search">Button</sicl-button>
         <sicl-button class="secondary" type="button" icon-right="arrow-left">Button</sicl-button>
         <sicl-button class="tertiary" type="button" icon-right="help-circle">Button</sicl-button>
-        <sicl-button class="warning" type="button" icon-right="trash-2">Button</sicl-button>
+        <sicl-button class="danger" type="button" icon-right="trash-2">Button</sicl-button>
       </div>
       <div class="row">
         <sicl-button class="primary" type="button" disabled>Button</sicl-button>
         <sicl-button class="secondary" type="button" disabled>Button</sicl-button>
         <sicl-button class="tertiary" type="button" disabled>Button</sicl-button>
-        <sicl-button class="warning" type="button" disabled>Button</sicl-button>
+        <sicl-button class="danger" type="button" disabled>Button</sicl-button>
       </div>
       <div class="row">
         <sicl-input type="text" placeholder="Placeholder" label-text="Default"></sicl-input>
