🔧 Preparing for npm publish 🔧 Tweaking toast logic

--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,8 @@
         </sicl-radio-group>
       </div>
       <div class="row">
-        <sicl-toast label="toast-success" type="success" active>
-          <div slot="message">Message</div>
+        <sicl-toast label="toast-success" type="success" active="">
+          <div slot="message">Even larger message just to see how long it will be</div>
         </sicl-toast>
       </div>
     </div>
