--- a/src/index.html
+++ b/src/index.html
@@ -75,16 +75,16 @@
         <p class="body-1 regular">Put them in with the form below, I will <i>try</i> to save them in a list on the right.</p>
       </span>
       <span class="form-wrapper">
-        <sicl-input name="description" style="width: 100%" label-text="Name (max. 40 characters)" placeholder="ex. Dinner" max-length="40"></sicl-input>
-        <sicl-input name="value" style="width: 35%" type="number" step="0.01" min="0" label-text="Value" placeholder="4.11"></sicl-input>
+        <sicl-input name="description" style="width: 100%" label-text="Name (max. 40 characters)" placeholder="ex. Dinner" max-length="40" form-associated="true"></sicl-input>
+        <sicl-input name="value" style="width: 35%" type="number" step="0.01" min="0" label-text="Value" placeholder="4.11" form-associated="true"></sicl-input>
         <sicl-radio-group name="paymentType" label-text="Payment type">
-          <sicl-radio label-text="💳 Card" checked></sicl-radio>
-          <sicl-radio label-text="💵 Cash"></sicl-radio>
+          <sicl-radio value="card" label-text="💳 Card" form-associated="true" checked></sicl-radio>
+          <sicl-radio value="cash" label-text="💵 Cash" form-associated="true"></sicl-radio>
         </sicl-radio-group>
         <sicl-checkbox-group name="additional" label-text="Additional info">
-          <sicl-checkbox label-text="🍟 Fast food"></sicl-checkbox>
-          <sicl-checkbox label-text="🍻 Alcohol"></sicl-checkbox>
-          <sicl-checkbox label-text="👀 Do you regret this?"></sicl-checkbox>
+          <sicl-checkbox value="fast-food" label-text="🍟 Fast food" form-associated="true"></sicl-checkbox>
+          <sicl-checkbox value="alcohol" label-text="🍻 Alcohol" form-associated="true"></sicl-checkbox>
+          <sicl-checkbox value="regret" label-text="👀 Do you regret this?" form-associated="true"></sicl-checkbox>
         </sicl-checkbox-group>
         <span class="form-buttons">
           <sicl-button type="reset" variant="tertiary" icon-left="trash">Clear</sicl-button>
